# gmanim

./: .gitignore  Cargo.toml  README.md
src/: camera.rs  lib.rs  log_utils.rs  math_utils.rs
src/animation/: mod.rs
src/camera/: mod.rs
src/math_utils/: constants.rs  mod.rs
src/mobjects/: formula.rs  group.rs  mod.rs  path.rs  polygon.rs  svg_shape.rs  text.rs  three_d_viewport.rs
src/video_backend/: mod.rs
