[package]
name = "gmanim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raqote = "0.8"

ndarray = {version = "0.15", features = ["serde", "blas"]}
blas-src = { version = "0.8", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
ndarray-linalg = { version = "0.16.0", features = ["openblas-system"] }